--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,8 @@
     <!--It's good to keep this short, so your launcher icon isn't displayed with "The greatest Wea"-->
     <!--or something similar.-->
     <string name="app_name">Sunshine</string>
-    <string name="error_loading_weather">error loading weather</string>
+    <string name="error_loading_weather">An error has ocurred, please try later.</string>
+    <string name="refresh">Refresh</string>
 
 
     <!-- - - - - - - - - - - - - -->
@@ -112,7 +113,6 @@
     <string name="condition_962">Hurricane</string>
 
     <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
-    <string name="refresh">Refresh</string>
 
 
     <!-- - - - - - - - - - - -->
