--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,9 +22,8 @@
     <string name="pref_unit_celsius_value">metric</string>
     <string name="pref_unit_fahrenheit_value">imperial</string>
 
-
     <string name="pref_location_key">location</string>
-    <string name="pref_location_default">04400</string>
+    <string name="pref_location_default">Mexico City,MX</string>
 
     <!-- - - - - - - - - - - - - -->
     <!--Used by SunshineDateUtils-->
